--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sandras website</title>
 </head>
 <body>
-    
+    <img src="./image/polish_save.png" alt="Picture of Sandra Moller-Sorensen">
+    <h1>My name is Sandra</h1>
+    <p>yoyoyo motherfuckers</p>
 </body>
 </html>
