--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Sandras website</title>
 </head>
 <body>
-    <img src="./image/polish_save.jpeg" alt="Picture of Sandra Moller-Sorensen">
+    <img src="./image/polish_save.jpeg" alt="Picture of Sandra Moller-Sorensen" width="240">
     <h1>My name is Sandra</h1>
     <p>yoyoyo motherfuckers</p>
 </body>
